# aspen

./: .gitignore  README.md
.cursor/rules/: current-progress.mdc  langgraph.mdc
aspen_backend/: .gitignore  hello.txt  main.py  pyproject.toml
aspen_backend/src/: main.py
aspen_backend/src/prompts/: react_agent_prompt.txt
aspen_backend/src/tools/: file_system_tools.py
next-js/src/app/: page.tsx
next-js/src/app/api/agent_chat/: route.ts
research/: a-practical-guide-to-building-agents.md
