[project]
name = "aspen-backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.12",
    "langchain>=0.3.24",
    "langchain-community>=0.3.22",
    "langchain-ollama>=0.3.2",
    "langgraph>=0.4.0",
    "python-dotenv>=1.1.0",
    "uvicorn[standard]>=0.34.2",
]
